# dyra

./: Cargo.toml  build.rs  bunny.do  quad.do  shader.frag  textured_polygon_2d.vert  textured_polygon_3d.vert  texturedquad.do  untextured_polygon_2d.frag  untextured_polygon_2d.vert
resources/materials/: singlecolor3dmesh.dm  textured2dquad.dm  untextured2dquad.dm
resources/objects/: bunny.do  quad.do  texturedquad.do
resources/pipelines/: solidcolor3dpolygon.dgp  textured2dpolygon.dgp  untextured2dpolygon.dgp
resources/shaders/: solidcolor_polygon_3d.frag  solidcolor_polygon_3d.vert  textured_polygon_2d.frag  textured_polygon_2d.vert  textured_polygon_3d.frag  textured_polygon_3d.vert  untextured_polygon_2d.frag
src/: abstract.rs  control_flow.rs  decoder.rs  event.rs  main.rs  painter.rs  test_window.rs  window.rs
