[package]
name = "dyra"
version = "0.1.0"
authors = ["slaide <patrick.hennig@fau.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
libc = "0.2.93"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = [ "winuser" ] }

[target.'cfg(target_os="linux")'.dependencies]
xcb = "0.9.0"