[package]
name = "dyra"
version = "0.1.0"
authors = ["slaide <patrick.hennig@fau.de>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
libc = "0.2.93"
memoffset = "0.6.3"
image = "0.23.14"
nalgebra-glm = "0.12.0"
itertools = "0.10.0"
dyra_parser={path="../dyra_parser",version="0.1.0"}

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3.9", features = [ "winuser" ] }

[target.'cfg(target_os="linux")'.dependencies]
xcb = "0.9.0"